--- a/Project/-CS3_2ndQtrPortfolio_StrontiumMallari/public/Pages/ClericPage.html
+++ b/Project/-CS3_2ndQtrPortfolio_StrontiumMallari/public/Pages/ClericPage.html
@@ -14,6 +14,6 @@
             <li><a href='Help.html'>Digital Clerics</a></li>
         </ul>
     </nav>
-    <button id="AU" onclick="window.location.href='AboutUs.html'">- Request Help -</button>
+    <button id="AU" onclick="window.location.href='AboutUs.html'">Request Help from the creators of the website. Bugs or glitches that may be found throughout the website. If any sites or links are unavailable then please click here to report it.</button>
   </body>
 </html>
